[package]
name = "rocksdb-pyo3"
version = "0.1.0"
edition = "2021"

[lib]
name = "rocksdb_pyo3"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "^0.20.0", features = [ "abi3", "abi3-py310", "experimental-inspect", "anyhow" ] }
pyo3-log = "0.9.0"
#rocksdb = { version = "0.22.0", features = [ "multi-threaded-cf" ] }
#librocksdb-sys = "*"
rocksdb = { git = "https://github.com/jansegre/rust-rocksdb", features = [ "multi-threaded-cf" ] }
librocksdb-sys = { git = "https://github.com/jansegre/rust-rocksdb" }
anyhow = "1.0.79"
log = "0.4.20"
slotmap = "1.0.7"
